--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
   },
   "dependencies": {
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-redux": "5.0.3",
+    "react-router": "3.0.3",
+    "redux": "3.6.0",
+    "redux-devtools-extension": "2.13.0",
+    "redux-thunk": "2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
